# riirando

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: perf-test.sh  test.py  test.sh
assets/asm/: hacks.asm  main.asm
assets/doc/: fill.md  history.md
assets/logic/: bosses.logic.rs  dungeons.logic.rs  helpers.logic.rs  overworld.logic.rs
crate/riirando/: Cargo.toml  build.rs
crate/riirando-common/: Cargo.toml
crate/riirando-common/src/: lib.rs
crate/riirando-history/: Cargo.toml
crate/riirando-history/src/: main.rs
crate/riirando-macros/: Cargo.toml  build.rs
crate/riirando-macros/src/: ast.rs  lib.rs
crate/riirando/src/: logic.rs  main.rs  patch.rs  search.rs
src/: main.rs  patch.rs  search.rs
