[package]
name = "riirando"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
async-compression = { version = "0.3", features = ["tokio", "zlib"] }
clap = { version = "4.3.11", features = ["derive"] }
crossterm = "0.25"
itertools = "0.10"
rand = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["io-std", "io-util"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }

[build-dependencies]
itertools = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "process"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
