[package]
name = "riirando-history"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
git2 = "0.18.3"
lazy-regex = "3.1.0"
ootr-utils = { git = "https://github.com/midoshouse/rust-ootr-utils", branch = "main" }
semver = "1.0.22"
thiserror = "1"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
