[package]
name = "riirando"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-compression = { version = "0.4", features = ["tokio", "zlib"] }
clap = { version = "4.3.11", features = ["derive"] }
collect-mac = "0.1.0"
crossterm = "0.28"
decompress = { git = "https://github.com/fenhl/OoT_Decompressor.git", branch = "riir" }
enum-iterator = "2"
enumset = "1.1.3"
itertools = "0.14"
petgraph = { version = "0.6.3", default-features = false, features = ["matrix_graph"] }
rand = "0.9"
riirando-common = { path = "../riirando-common" }
riirando-macros = { path = "../riirando-macros" }
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util"] }
tokio-util = "0.7.11"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }

[build-dependencies]
itertools = "0.14"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "process"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
